--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -6,3 +6,7 @@ vich_uploader:
             uri_prefix: /images/ingredients
             upload_destination: '%kernel.project_dir%/public/images/ingredients'
             namer: Vich\UploaderBundle\Naming\OrignameNamer
+        category_image:
+            uri_prefix: /images/categories
+            upload_destination: '%kernel.project_dir%/public/images/categories'
+            namer: Vich\UploaderBundle\Naming\OrignameNamer
